src/app/components/top-navigation/components/product-search/product-search.component.scss
@import 'variables';
@import 'mixins';

div.product-search {

    margin: 15px;
    border-top-right-radius: 30px;
    border-bottom-right-radius: 30px;

    display: flex;
    position: relative;

    @include mobile-down {
        flex-direction: column;
        align-items: center;
        border-top-right-radius: 20px;
    }

    .product-search__social-media-icon-wrapper {
        width: 250px;
        display: flex;
        align-items: center;
        justify-content: space-between;

        img {
            width: 40px;
            cursor: pointer;

            transition: filter 150ms linear;

            &:hover {
                filter: invert(60%)
            }
        }
    }

    .product-search__search-input-wrapper {
        width: 100%;
        display: flex;
        position: relative;
        border-radius: 30px;
        border: 1px solid $text-dark-colour;
        background-color: transparentize($text-light-colour, .8);
        margin-left: 30px;
        padding: 0 10px;

        .product-search__search-input-icon {
            position: relative;
            top: 3px;
            color: lighten($text-dark-colour, 10);
        }

        .product-search__search-input {

            height: 44px;

            outline: none;

            color: $text-dark-colour;
            font-size: 16px;

            flex: 1 1 auto;
            background-color: transparent;
            border: none;



        }
        @include mobile-down {
            // order: -1;
            margin-bottom: 10px;
            width: 100%;
            margin: 0;
        }
    }

    &.home {
        .product-search__search-input {
            background-color: transparentize(white, .9);
            border-color: transparentize(white, .7);
            color: white;


        }
    }

}

app-icon {
    color: $secondary-accent-colour;
}

